# adventofcode

./: .env  .gitignore  README.md  advent.ts  coords.ts  figlet-4x6.txt  figlet-6x10.txt  graph.ts  index.js  mise.toml  package.json  pdm.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  runner.ts  test.sh  tsconfig.json  util.ts
.zed/: tasks.json
2015/: .eslintrc  day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day20.ts  day21.ts  day22.ts  day23.ts  day24.ts  day25.ts  package.json  pnpm-lock.yaml  tsconfig.json  util.ts
2016/: advent.ts  asembunny.ts  day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day20.ts  day21.ts  day22.ts  day23.ts  day24.ts  day25.ts  package.json  pnpm-lock.yaml  util.ts
2017/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day20.ts  day21.ts  day22.ts  day23.ts  day24.ts  day25.ts  knot-hash.ts  package.json  pnpm-lock.yaml
2018/: day01.js  day01.ts  day02.js  day02.ts  day03.js  day03.ts  day04.js  day04.ts  day05.js  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day20.ts  day21.ts  day22.ts  day23.ts  day24.ts  day25.ts  package.json  util.js
2019/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day20.ts  day21.ts  day22.ts  day23.ts  day24.ts  day25.ts  intcode.ts  package.json  tsconfig.json  util.ts
2020/: advent.ts  day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day20.ts  day21.ts  day22.ts  day23.ts  day24.ts  day25.ts  package.json  pnpm-lock.yaml  util.ts
2021/: day01.ts  day02.ts  day03.ts  day04.ts  day05.ts  day06.ts  day07.ts  day08.ts  day09.ts  day10.ts  day11.ts  day12.ts  day13.ts  day14.ts  day15.ts  day16.ts  day17.ts  day18.ts  day19.ts  day20.ts  day21.ts  day22.ts  day23.ts  day24.ts  (+3 more)
pkg/aocli/: pyproject.toml
pkg/aocli/aocli/: __init__.py  __main__.py  run.py  ui.py
(+657 files in other folders)
