[project]
name = "adventofcode"
version = "1.0.0"
authors = [{ name = "Zak Johnson", email = "me@zakj.net" }]
dependencies = [
    "aoc",
    "aocli",
    "mypy>=1.7.0",
    "ruff>=0.1.13",
]
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }

[tool.uv.config-settings]
editable_mode = "compat"

[tool.uv.sources]
aocli = { path = "pkg/aocli", editable = true }
aoc = { path = "pkg/aoc", editable = true }

[tool.pyright]
typeCheckingMode = "standard"

[tool.ruff.lint]
select = ["B", "E", "F", "FURB", "I", "RUF", "SIM", "UP", "W"]
ignore = [
    "E741",  # ambiguous variable name
]
