[project]
name = "adventofcode"
version = "1.0.0"
authors = [{ name = "Zak Johnson", email = "me@zakj.net" }]
requires-python = ">=3.14,<3.15"
license = { text = "MIT" }

dependencies = ["aoc", "aocli", "mypy>=1.7.0", "ruff>=0.1.13"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-watcher>=0.4.3",
]

[tool.uv.sources]
aocli = { workspace = true }
aoc = { workspace = true }

[tool.uv.workspace]
members = ["aocli", "py/lib"]

[tool.pytest.ini_options]
testpaths = ["py/lib/tests"]
addopts = ["--cov-report=term-missing:skip-covered"]

[tool.coverage.run]
source = ["py/lib/aoc"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "py/lib/aoc/__init__.py",
]

[tool.coverage.report]
exclude_also = [
    "^\\s*\\.\\.\\.",
    "raise NotImplementedError",
]

[tool.pyright]
typeCheckingMode = "standard"
extraPaths = ['py/lib']

[tool.pytest-watcher]
clear = true
delay = 0.1
runner_args = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
isort.known-first-party = ["aoc"]
select = ["B", "E", "F", "FURB", "I", "RUF", "SIM", "UP", "W"]
ignore = [
    "E741", # ambiguous variable name
]
